# nucleaizer_backend

./: .gitignore  .travis.yml  MANIFEST.in  Makefile  README.md  clean.sh  pytest.ini  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: test_and_deploy.yml
nucleaizer_backend/CycleGAN/data/: aligned_dataset.py  custom_dataset_data_loader.py
nucleaizer_backend/CycleGAN/models/: models.py  networks.py  pix2pix_model.py  pix2pix_model_newpytorch.py
nucleaizer_backend/CycleGAN/options/: base_options.py
nucleaizer_backend/CycleGAN/util/: visualizer.py  visualizer_cus.py
nucleaizer_backend/Mask_RCNN_tf2/samples/balloon/: balloon.py
nucleaizer_backend/Mask_RCNN_tf2/samples/shapes/: train_shapes.ipynb
