[metadata]
name = nucleaizer_backend
version = 0.1.1
author = Ervin Tasnadi
author_email = tasnadi.ervin@brc.hu
url = https://github.com/etasnadi/nucleaizer_backend
license = GPL-3.0
description = The backend for the nucleAIzer nuclei segmentation method.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers=
    'Development Status :: 3 - Alpha'
    'Intended Audience :: Developers'
    'Framework :: napari'
    'Topic :: Software Development :: Testing'
    'Programming Language :: Python'
    'Programming Language :: Python :: 3'
#    'Programming Language :: Python :: 3.7'
    'Programming Language :: Python :: 3.8'
    'Programming Language :: Python :: 3.9'
    'Programming Language :: Python :: 3.10'
    'Operating System :: OS Independent'
    'License :: OSI Approved :: BSD License'

project_urls = 
    Bug Tracker = https://github.com/etasnadi/nucleaizer_backend/issues
    Documentation = https://napari-nucleaizer-docs.readthedocs.io/en/latest/index.html
    Source Code = https://github.com/etasnadi/nucleaizer_backend
    User Support = https://github.com/etasnadi/nucleaizer_backend/issues

[options]
packages= 
    nucleaizer_backend
    nucleaizer_backend._tests
    nucleaizer_backend.mrcnn_interface
    nucleaizer_backend.mrcnn_interface._tests
    nucleaizer_backend.CycleGAN
    nucleaizer_backend.Mask_RCNN_tf2
    nucleaizer_backend.Mask_RCNN_tf2.mrcnn
    nucleaizer_backend.pix2pix_interface

#packages = find:
#package_dir =
#    =.
include_package_data = True
python_requires = >=3.8

install_requires=
    # Windows + Linux dependencies
    numpy>=1.18.5
    scipy>=1.4.1
    Cython
    tqdm
    albumentations
    opencv-python>=4.5.1

    # Mask R-CNN tf2 dependencies
    tensorflow-gpu>=2.3
    imageio>=2.9.0
    imagecodecs
    matplotlib
    scikit-image>=0.18.1
    ipython

    # CycleGAN dependencies
    torch>=1.8.1
    torchvision>=0.9.1
    dominate

[options.packages.find]
where = .

[options.package_data]
* = *.yaml

[options.entry_points]
console_scripts =
    nucleaizer_train = nucleaizer_backend:training_cli

	